Updated proyek run/test java option to avoid unsafe/native access warnings.